# visualacuity

./: .editorconfig  .gitignore  .python-version  Cargo.toml  README.md  pyproject.toml  python-develop.sh
.github/workflows/: build.yaml
examples/: map_reduce.py  near_total_loss.py  plus_minus.py  visit_stats.py  visual_acuity_distribution.py
src/visualacuity/: Cargo.toml
src/visualacuity-proc-macro/: Cargo.toml
src/visualacuity-proc-macro/src/: lib.rs
src/visualacuity-python/: Cargo.toml
src/visualacuity-python/src/: lib.rs  types.rs
src/visualacuity-python/tests/: __main__.py  common  helpers.py  test_common.py  test_va_interface.py
src/visualacuity-python/visualacuity/: __init__.py  _enum_helpers.py  _lib.pyi  _parse.py  _read_file.py  _types.py
src/visualacuity-python/visualacuity/cli/: __init__.py  _helpers.py  _map_reduce.py  _stats.py
src/visualacuity-python/visualacuity/cli/examples/: data_quality.py  near_total_loss.py  plus_minus.py  unexpected_patterns.py  va_distribution.py  visit_stats.py  visual_acuity_distribution.py
src/visualacuity/assets/charts/: bailey-lovie.feet.tsv  bailey-lovie.meters.tsv  etdrs.tsv  holland.tnlv.tsv  jaeger.tsv  schulze-bonzel.tnlv.tsv  snellen.feet.tsv  teller.card.tsv  teller.cycm.tsv  teller.feet.tsv
src/visualacuity/src/: cache.rs  dataquality.rs  distanceunits.rs  errors.rs  helpers.rs  lib.rs  logmar.rs  macros.rs  snellen_equivalent.rs  structure.rs  visit.rs  visitinput.rs
src/visualacuity/src/charts/: chart.rs  mod.rs  scratch.rs
src/visualacuity/src/parser/: decorator.rs  grammar.lalrpop  grammar_helpers.rs  key.lalrpop  mod.rs  test.rs  wrapper.rs
src/visualacuity/src/tests/: helpers.rs  macros.rs  mod.rs  tests_common.rs  tests_parser.rs  tsv_reader.rs
src/visualacuity/src/types/: mod.rs
src/visualacuity/src/visit/: metadata.rs  mod.rs  tests.rs
testing/: test_cases_conversions.tsv  test_cases_parsing.tsv
