[build-system]
requires = ["maturin>=1.3,<1.5"]
build-backend = "maturin"

[tool.maturin]
python-source = "src/visualacuity-python"
manifest-path = "src/visualacuity-python/Cargo.toml"
module-name = "visualacuity._lib"

[project]
name = "visualacuity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
