[package]
name = "visualacuity-python"
version = "0.1.0-alpha1"
edition = "2021"

[lib]
name = "visualacuity_python"
crate-type = ["cdylib", "lib"]

[dependencies]
visualacuity = { path = "../visualacuity" }
anyhow = "1.0.75"
lazy_static = "1.4.0"
pyo3 = { version = "0.19.2", features = ["anyhow", "extension-module", "abi3", "abi3-py37"] }
itertools = "0.12.0"

[dev-dependencies]
test-case = "*"