[package]
name = "visualacuity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = 'visualacuity'

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lazy_static = "1.4.0"
regex = "1"
itertools = "0.12.0"
derive_more = "0.99.17"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
logos = "0.13.0"
lru = "0.12.1"

[dev-dependencies]
anyhow = "1.0.75"
test-case = "*"